[gd_scene load_steps=8 format=2]

[ext_resource path="res://Textures/char_idle_bob.png" type="Texture" id=1]
[ext_resource path="res://Src/Entities/Character.gd" type="Script" id=2]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 overlay_color = vec4(1.0, 1.0, 1.0, 1.0);

void fragment() {
	COLOR = texture(TEXTURE, UV) * overlay_color;
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 1 )
shader_param/overlay_color = Plane( 1, 1, 1, 1 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 144.0
height = 560.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 104.0
height = 48.0

[sub_resource type="Animation" id=5]
resource_name = "on_start_drag"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "show_overlay_color"
}, {
"args": [ false ],
"method": "show_overlay_color"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[node name="Character" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 6 )
texture = ExtResource( 1 )

[node name="MouseArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseArea"]
shape = SubResource( 3 )

[node name="CheckArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckArea"]
shape = SubResource( 4 )

[node name="Tween" type="Tween" parent="."]
playback_speed = 3.0
playback/speed = 3.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/on_start_drag = SubResource( 5 )
[connection signal="mouse_entered" from="MouseArea" to="." method="_on_MouseArea_mouse_entered"]
[connection signal="mouse_exited" from="MouseArea" to="." method="_on_MouseArea_mouse_exited"]
[connection signal="area_entered" from="CheckArea" to="." method="_on_CheckArea_area_entered"]
[connection signal="area_exited" from="CheckArea" to="." method="_on_CheckArea_area_exited"]
